VietNH: Fix Bug, thêm tính năng thống kê trong danh sách nhân khẩu

--- a/QuanLyNhanKhau/Views/Data/Index_HoKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Index_HoKhau.cshtml
@@ -113,8 +113,9 @@
             </div>
             <div class="modal-body m-2" style="background:aliceblue;">
                 <form method="post">
-                    <input name="keyword" type="text">
-                    <button type="submit" action="Index_HoKhau" asp-action-route-id="1">Tìm kiếm</button>
+                    <input name="keyword" class="form-control" placeholder="Từ khóa tìm kiếm" type="text">
+                    <br />
+                    <button class="btn btn-info" type="submit" action="Index_HoKhau" asp-action-route-id="1">Tìm kiếm</button>
                 </form>
             </div>
         </div>
