--- a/QuanLyNhanKhau/Views/Shared/_InnerLayout.cshtml
+++ b/QuanLyNhanKhau/Views/Shared/_InnerLayout.cshtml
@@ -8,7 +8,7 @@
                 <h1 class="page-head-line">@ViewData["Title"]</h1>
                 <h1 class="page-subhead-line">@ViewData["Desc"]</h1>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-12" id="error-body">
                 @RenderBody()
             </div>
         </div>
