--- a/QuanLyNhanKhau/wwwroot/css/error.css
+++ b/QuanLyNhanKhau/wwwroot/css/error.css
@@ -1,35 +1,109 @@
-﻿
-/*=============================================================
-    Authour URI: www.binarytheme.com
-    License: Commons Attribution 3.0
+﻿@import 'https://fonts.googleapis.com/css?family=Inconsolata';
 
-    http://creativecommons.org/licenses/by/3.0/
+html {
+    min-height: 100%;
+}
 
-    100% To use For Personal And Commercial Use.
-    IN EXCHANGE JUST GIVE US CREDITS AND TELL YOUR FRIENDS ABOUT US
-   
-    ========================================================  */
-/*===================
-    ERROR STYLES
-    ===============*/
-body {
-    background-color: #E2E2E2;
+#page-inner {
+    box-sizing: border-box;
+    height: 100%;
+    background-color: #000;
+    background-image: radial-gradient(#11581e, #041607), url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: 'Inconsolata', Helvetica, sans-serif;
+    font-size: 1.5rem;
+    color: rgba(128, 255, 128, 0.8);
+    text-shadow: 0 0 1ex rgba(51, 255, 51, 1), 0 0 2px rgba(255, 255, 255, 0.8);
+}
 
+.noise {
+    pointer-events: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url("https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -1;
+    opacity: 0.02;
 }
-.set-pad {
-    padding-top:120px;
+
+.overlay {
+    pointer-events: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: repeating-linear-gradient(180deg, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.3) 50%, rgba(0, 0, 0, 0) 100%);
+    background-size: auto 4px;
+    z-index: 1;
 }
-.error-txt {
-    font-size:50px;
-    display:block;
-    padding-bottom:10px;
+
+    .overlay::before {
+        content: "";
+        pointer-events: none;
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(0deg, transparent 0%, rgba(32, 128, 32, 0.2) 2%, rgba(32, 128, 32, 0.8) 3%, rgba(32, 128, 32, 0.2) 3%, transparent 100%);
+        background-repeat: no-repeat;
+        animation: scan 7.5s linear 0s infinite;
+    }
+
+@keyframes scan {
+    0% {
+        background-position: 0 -100vh;
+    }
+
+    35%, 100% {
+        background-position: 0 100vh;
+    }
 }
-.p-err {
-    font-size:20px;
-    padding:20px;
+
+.terminal {
+    box-sizing: inherit;
+    position: absolute;
+    height: 100%;
+    width: 1000px;
+    max-width: 100%;
+    padding: 4rem;
+    text-transform: uppercase;
 }
-.c-err {
-    background-color:#62abb2;
-    padding:30px 0px 0px 0px;
-    margin:20px 0px;
+
+.output {
+    color: rgba(128, 255, 128, 0.8);
+    text-shadow: 0 0 1px rgba(51, 255, 51, 0.4), 0 0 2px rgba(255, 255, 255, 0.8);
+}
+
+    .output::before {
+        content: "> ";
+    }
+/* .input {
+	 color: rgba(192, 255, 192, 0.8);
+	 text-shadow: 0 0 1px rgba(51, 255, 51, 0.4), 0 0 2px rgba(255, 255, 255, 0.8);
+}
+ .input::before {
+	 content: "$ ";
+}
+ */
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
+    a::before {
+        content: "[";
+    }
+
+    a::after {
+        content: "]";
+    }
+
+.errorcode, .page-head-line, .page-subhead-line {
+    color: white;
 }
