--- a/QuanLyNhanKhau/Views/Account/Login.cshtml
+++ b/QuanLyNhanKhau/Views/Account/Login.cshtml
@@ -108,6 +108,8 @@
 });
 </script>
 
+<title>Đăng nhập</title>
+
 <div class="login-page">
    <div class="card p-2">
         <h1 class="card-body">Đăng nhập</h1>
