--- a/QuanLyNhanKhau/Views/Data/Create_NhanKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Create_NhanKhau.cshtml
@@ -45,7 +45,7 @@
                             </div>
                             <div class="form-group">
                                 <label asp-for="NgaySinh" class="control-label"></label>
-                                <input asp-for="NgaySinh" class="form-control"/>
+                                <input type="date" asp-for="NgaySinh" class="form-control"/>
                                 <span asp-validation-for="NgaySinh" class="text-danger"></span>
                             </div>
                             <div class="form-group">
@@ -92,7 +92,7 @@
                             </div>
                             <div class="form-group">
                                 <label asp-for="NgayCapCMND" class="control-label"></label>
-                                <input asp-for="NgayCapCMND" class="form-control"/>
+                                <input type="date" asp-for="NgayCapCMND" class="form-control"/>
                                 <span asp-validation-for="NgayCapCMND" class="text-danger"></span>
                             </div>
                             <div class="form-group">
@@ -102,7 +102,7 @@
                             </div>
                             <div class="form-group">
                                 <label asp-for="NgayDangKi" class="control-label"></label>
-                                    <input asp-for="NgayDangKi" class="form-control"/>
+                                <input type="date" asp-for="NgayDangKi" class="form-control"/>
                                 <span asp-validation-for="NgayDangKi" class="text-danger"></span>
                             </div>
                             <div class="form-group">
