--- a/QuanLyNhanKhau/Views/Data/Edit_NhanKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Edit_NhanKhau.cshtml
@@ -36,7 +36,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label asp-for="NgaySinh" class="control-label"></label>
-                                        <input asp-for="NgaySinh" class="form-control" />
+                                        <input type="date" asp-for="NgaySinh" class="form-control" />
                                         <span asp-validation-for="NgaySinh" class="text-danger"></span>
                                     </div>
                                     <div class="form-group">
