--- a/QuanLyNhanKhau/Views/Account/Login.cshtml
+++ b/QuanLyNhanKhau/Views/Account/Login.cshtml
@@ -31,7 +31,7 @@
         <!-- Tabs Titles -->
         <!-- Icon -->
         <div class="fadeIn first" style="padding: 1em">
-            <i class="fa fa-user fa-5x" aria-hidden="true" style="color: forestgreen"></i>
+            <i class="fa fa-user fa-5x" aria-hidden="true" style="color: deepskyblue"></i>
         </div>
 
         <!-- Login Form -->
