NamTX: Sửa chính tả

--- a/QuanLyNhanKhau/Views/Home/Index.cshtml
+++ b/QuanLyNhanKhau/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                 <div class="main-box mb-pink">
                     <a href="#">
                         <i class="fa fa-calendar fa-5x"></i>
-                        <h5>Nhà văn hóa "TO"</h5>
+                        <h5>Nhà văn hóa</h5>
                     </a>
                 </div>
             </div>
