VietNH: Fix bug, thêm chức năng

--- a/QuanLyNhanKhau/Views/Data/Details_NhanKhau.cshtml
+++ b/QuanLyNhanKhau/Views/Data/Details_NhanKhau.cshtml
@@ -56,7 +56,7 @@
                                 </tr>
                                 <tr>
                                     <td style="font-weight:bold;">Ngày cấp CMND</td>
-                                    <td>@Model.NgayCapCMND.ToShortDateString()</td>
+                                    <td>@(((DateTime)Model.NgayCapCMND).ToShortDateString())</td>
                                 </tr>
                                 <tr>
                                     <td style="font-weight:bold;">Nơi cấp CMND</td>
